--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ html {
     font-family: sans-serif;
 }
 
+/* .menu-column {
+    display: flex;
+    align-items: center;
+} */
+
 .main-menu-top {
     display: flex;
     justify-content: flex-start;
@@ -22,14 +27,14 @@ html {
 }
 
 .boolean-logo {
-    width: 150px;
+    width: 100px;
 }
 
 .logo-column {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: .1em;
+    /* margin-top: .1em; */
     
 }
 
@@ -47,12 +52,43 @@ html {
     justify-content: center;
 }
 
-.immagine-top, .immagine-bottom {
+.img-top, .img-bottom {
     width: 33%;
     padding: .5em;
 }
 
-.immagine-top {
+.img-top {
     padding-top: 100px;
     padding-bottom: 70px;
+}
+
+.img-bottom {
+    padding-bottom: 100px;
+}
+
+/* .container-1:hover, .overlay-1 {
+    opacity: 1;
+} */
+
+.bottom-bar {
+    background-color: black;
+    height: 70px;
+    width: 100%;
+}
+
+.main-menu-bottom {
+    display: flex;
+    justify-content: flex-start;
+    /* align-items: center; */
+    list-style-type: none;
+}
+
+.bottom-menu-color {
+    color: white;
+    text-decoration: none;
+    padding: .5em;
+}
+
+.booleando {
+    color: white;
 }
