--- a/style.css
+++ b/style.css
@@ -8,20 +8,18 @@ html {
     font-family: sans-serif;
 }
 
-/* .menu-column {
-    display: flex;
-    align-items: center;
-} */
+img {
+    max-width: 100%;
+}
 
-/* .container {
-    max-width: 1000px;
-    margin: 0 auto;
-} */
+.container {
+	max-width: 1000px;
+	margin: 0 auto;
+}
 
 .main-menu-top {
     display: flex;
     justify-content: flex-start;
-    /* align-items: center; */
     list-style-type: none;
 }
 
@@ -39,8 +37,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-top: .1em; */
-    
 }
 
 .button-menu {
@@ -61,44 +57,99 @@ html {
     align-items: center;
 }
 
-.main-menu-middle {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    position: relative;
-    max-width: 1000px;
-    margin: 0 auto;
+/* main */
+
+main {
+	padding-top: 3rem;
 }
 
-/* .rel {
-    position: relative;
-} */
-
-/* .abs {
-    position: absolute;
-    top: 500px;
-    left: 500px;
-    background: red;
-    z-index: 5;
-} */
-
-.img-top, .img-bottom {
-    width: 33%;
-    padding: .5em;
+main .container {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 1rem;
+	row-gap: 4rem;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
-.img-top {
-    padding-top: 100px;
-    padding-bottom: 70px;
+.card {
+	width: 30%;
+	flex: 1 1 auto;
 }
 
-.img-bottom {
-    padding-bottom: 100px;
+.card img {
+	display: block;
 }
 
-/* .container-1:hover, .overlay-1 {
-    opacity: 1;
-} */
+.card h2 {
+	font-size: 1.2rem;
+	text-transform: uppercase;
+}
+
+.card .last-price {
+	color: red;
+	font-weight: bold;
+}
+
+.card .first-price {
+	text-decoration: line-through;
+}
+
+.card .img-area {
+	position: relative;
+}
+
+.card .heart {
+	position: absolute;
+	padding: .4em;
+	top: 10px;
+	right: 0;
+	background-color: white;
+	font-size: 1.4rem;
+	cursor: pointer;
+}
+
+.card .heart:hover {
+	color: red;
+}
+
+.card .tags {
+	display: flex;
+	gap: .5rem;
+	position: absolute;
+	left: 0;
+	bottom: 20px;
+}
+
+.card .tag {
+	padding: .5em;
+	color: white;
+	font-weight: bold;
+}
+
+.card .tag-discount {
+	background-color: red;
+}
+
+.card .tag-info {
+	background-color: green;
+}
+
+.card .img-above {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.card:hover .img-above {
+	z-index: -1;
+}
+
+/* footer */
+
+.container-footer {
+    width: 100%;
+}
 
 .bottom-bar {
     background-color: black;
@@ -112,7 +163,6 @@ html {
 .main-menu-bottom {
     display: flex;
     justify-content: flex-start;
-    /* align-items: center; */
     list-style-type: none;
 }
 
